# Anga

./: .env  .gitignore  AI_ASSISTANT_FIX.md  API_ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MOBILE_APP_ISSUES_FIX.md  PORT_CONFIGURATION_FIX.md  README.md  REQUIREMENTS_CONSOLIDATION.md  SECURITY.md  WEATHER_SERVICE_FIX.md  codemagic.yaml  docker-compose.yml  env.example  nginx.conf  package.json  pyproject.toml  requirements.txt  setup_env.py  tatus  test_backend_comprehensive.py  weather.db
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  flutter-ci.yml
backend/: Dockerfile  ai_assistant_test.py  assistant_api.py  assistant_core.py  database_test.py  env_validator.py  init_db.py  main_api.py  requirements.txt  start_backend.bat  weather.db
docs/: README.md
mobile/: API_CONFIGURATION_GUIDE.md  IOS_CONFIGURATION_GUIDE.md  IOS_FIXES_SUMMARY.md  IPHONE_TESTING_FROM_WINDOWS.md  UI_IMPROVEMENT_GUIDE.md  pubspec.yaml  quick_start_iphone_testing.bat  setup_codemagic_ios.md
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart  theme.dart
mobile/lib/providers/: weather_provider.dart
mobile/lib/screens/: ai_assistant_screen.dart  alerts_screen.dart  dashboard_screen.dart  debug_screen.dart  live_weather_screen.dart  login_screen.dart  main_screen.dart  settings_screen.dart
mobile/lib/services/: ai_assistant_service.dart  auth_service.dart  connectivity_service.dart  live_weather_service.dart  notification_service.dart  performance_service.dart  storage_service.dart  weather_services.dart
mobile/lib/services/models/: weather_forecast.dart
mobile/lib/utils/: api_config.dart  app_state.dart  environment_config.dart  mobile_test_utility.dart  platform_test.dart  port_config_test.dart  weather_service_test.dart
mobile/lib/widgets/: debug_config_widget.dart  enhanced_weather_card.dart  weather_chart.dart
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/test/: weather_provider_test.dart
scripts/: setup_dev.py
